# denv

./: CONTRIBUTING.md  Cargo.toml  README.md  example.yml  package-lock.json
.github/workflows/: ci.yml
denv/: Cargo.toml
denv/src/: logger.rs  main.rs
denv/tests/: cli.rs
denv_lib/: Cargo.toml  config.schema.json
denv_lib/resources/main/: config.schema.json
denv_lib/resources/test/config/: denv.yml
denv_lib/resources/tests/config/: invalid-config.yml
denv_lib/src/: cfg.rs  error.rs  lib.rs  var.rs
denv_lib/src/internal/: downloader.rs  fs.rs  mod.rs  unzip.rs
denv_lib/src/software/: mod.rs  terraform.rs
denv_lib/src/tool/: mod.rs  terraform.rs
denv_lib/src/util/: cache.rs  downloader.rs  fs.rs  mod.rs  zip.rs
examples/: denv.yml
resources/main/config/: v1.schema.json
resources/main/hooks/: bash  zsh
resources/test/config/: invalid-v1.yml  v1.yml
src/: archive.rs  cfg.rs  cli.rs  fs.rs  log.rs  main.rs  net.rs  run.rs  test.rs
src/soft/: installer.rs  k8s.rs  mod.rs  tf.rs
src/var/: mod.rs
stub_trait/: Cargo.toml
stub_trait/src/: lib.rs
