[workspace]
members = [".", "stub_trait"]

[package]
name = "denv"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2", features = ["derive"] }
jsonschema = { version = "0.16", default-features = false, features = ["resolve-file"] }
log = { version = "0.4", features = ["std"] }
serde_json = "1.0"
serde_yaml = "0.8"

[dev-dependencies]
stub_trait = { path = "stub_trait" }
tempfile = "3.3"
