[workspace]
members = [".", "stub_trait"]

[package]
name = "denv"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2", features = ["derive"] }
exitcode = "1.0"
flate2 = "1.0"
jsonschema = { version = "0.16", default-features = false, features = ["resolve-file"] }
log = { version = "0.4", features = ["std"] }
reqwest = { version = "0.11", features = ["blocking"] }
serde_json = "1.0"
serde_yaml = "0.8"
tar = "0.4"
zip = { version = "0.6", default-features = false, features = ["bzip2", "deflate"] }

[dev-dependencies]
stub_trait = { path = "stub_trait" }
tempfile = "3.3"
