[package]
name = "denv"
version = "0.1.0"
edition = "2021"
authors = ["Guillaume Leroy <pro.guillaume.leroy@gmail.com>"]
description = "Manage environment variables and softwares versions per directory"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2", features = ["derive"] }
clap-verbosity-flag = "1.0"
denv_lib = { path = "../denv_lib" }
exitcode = "1.1"
log = { version = "0.4", features = ["std"] }

[dev-dependencies]
assert_cmd = "2.0"
