[package]
name = "denv_lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.4"
home = "0.5"
jsonschema = "0.16"
log = "0.4"
maplit = "1.0"
reqwest = { version = "0.11", features = ["blocking"] }
serde_json = "1.0"
serde_yaml = "0.8"
sha2 = "0.10"
tempfile = "3.3"
zip = "0.6"
